# hackathon-ufmg-2026-grupo10

./: .env.example  .gitignore  DEVELOPMENT_CONTEXT.md  README.md  SETUP.md  docker-compose.yml
data/: README.md  links_processos.csv  links_processos.html  processos.json  subsidios_disponibilizados.csv
docs/: README.md  presentation.html
models/: litigation_model.pth
models/final_llm/: main.py
src/back/: .dockerignore  Dockerfile  pyproject.toml
src/back/alembic/versions/: 0001_add_missing_columns.py
src/back/app/: main.py
src/back/app/core/: security.py
src/back/app/db/models/: processo.py
src/back/app/routers/: analysis.py  processes.py
src/back/app/schemas/: process.py
src/back/app/services/ai/: classifier.py  extractor.py  pipeline.py  valuator.py
src/back/scripts/: init_db.sh  seed_mock_metrics.py  test_extractor.py  test_valuator.py
src/back/tests/integration/: test_workflow_completo.py
src/front/src/: App.tsx  data.ts
src/front/src/api/: client.ts  processes.test.tsx  types.ts
src/front/src/modules/theme/: theme.css
src/front/src/screens/DashboardScreen/: DashboardScreen.css  DashboardScreen.tsx
src/front/src/screens/Home/: Home.css  Home.tsx
src/models/: DEVELOPMENT_CONTEXT.md
src/models/RN1/: RN1.py  test_logic.py
src/models/RN1/data/: makeData.py
src/models/RN1/training/: dataset.py  model.py  test.py  train.py
src/scraper/: datajud.py  gerar_html_links.py  gerar_links.py  main.py  tampermonkey_pje.js
src/scraper/downloaders/: __init__.py  base.py  eproc.py  esaj.py  pje.py  playwright_pje.py
(+17 files in other folders)
